<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NetHunter Android</string>
    <string name="app_nav_home_label">NetHunter Home</string>


	<string name="hometitle">Kali Linux NetHunter</string>
    <string name="nethunter_label">Nethunter Panel Home</string>
    <string name="nethunter_description">Welcome to Kali Linux NetHunter, by Offensive Security! This application is designed to make it easier to execute attacks and control services. The navigation menu contains links to useful commands, settings, macros, and attack configuration pages. Most configurations work out of the box but some may require some minimal tweaking.</string>
    <string name="nethunter_current_interfaces">Current interfaces</string>
    <string name="nethunter_external_ip">External IP address</string>

    <string name="kali_services_label">Kali Service Control</string>
    <string name="kali_services_description">Various Kali network services can be started and stopped via the buttons in this part of the interface.</string>

    <string name="hid_label">HID Keyboard Attack</string>
    <string name="hid_powersploit_description">The Powersploit payload provides you a choice of reverse meterpreter HTTP/S payloads. "URL to payload" should be a URL accessible to the victim machine where the larger payload is downloaded to.</string>
    <string name="hid_windows_cmd_description">This Windows CMD payload allows you to enter raw commands to a Windows command prompt. Hitting the list menu will allow you to choose keyboard layout or UAC bypass options. </string>
    
    <string name="hid_admin_select">Please select</string>
    <string-array name="hid_admin_options">
        <item>win7</item>
        <item>win8</item>
    </string-array>


    <string name="badusb_label">BadUSB MITM Attack</string>
    <string name="badusb_description">This is our implementation of the BadUSB attack as demonstrated at Black Hat USA 2014. Enabling this USB mode will turn your device with its OTG USB cable into a network interface when plugged into a target computer. Connecting the USB cable to a PC will force all traffic from that PC (Windows or Linux) through the NetHunter device, where the traffic can be MITM\'ed.</string>


    <string name="mana_label">MANA Evil Access Point</string>
    <string name="mana_headline">Evil Access Point</string>
    <string name="mana_description">This is the configuration page for MANA, an evil access point implementation by Sensepost. The various MITM logs get written to the /var/lib/mana-toolkit directory in the Kali chroot..</string>

	<string name="mana_hostapd">The hostapd configuration file used by Mana.</string>
	<string name="mana_dhcpd">The dhcpd configuration file used by Mana.</string>
	<string name="mana_dnsspoof">The dnsspoof configuration file used by Mana.</string>
	<string name="mana_nat_full">The Mana script that does full NAT &amp; SSL interception.</string>
	<string name="mana_nat_simple">The Mana script that does full NAT only.</string>
	<string name="mana_nat_simple_bdf">The Mana script that does full NAT &amp; BDFProxy HTTP routing to port 8080.</string>
    <string name="bdfproxy_cfg">The configuration file for BDFProxy.</string>
	<string name="mana_noupstream">The Mana no-upstream run script.</string>
	<string name="mana_noupstream_eap">The Mana no-upstream EAP run script.</string>

    <string name="dnsmasq_label">Dnsmasq Service</string>
    <string name="dnsmasq_headline">Dnsmasq Config</string>
    <string name="dnsmasq_description">Dnsmasq is a lightweight DNS forwarder and DHCP server that can easily be configured to provide DNS and DHCP services to a small network.</string>

    <string name="hostapd_label">Hostapd Service</string>
    <string name="hostapd_headline">Hostapd Config</string>
    <string name="hostapd_description">hostapd is a user space daemon for wireless access point and authentication servers. You can use hostapd to easily create a wireless access point using these configuration options:</string>

	<string name="duckhunter_label">HID Ducky Script Attacks</string>
	<string name="select_language">Language</string>
	<string name="duckConvertUpdate">Update</string>
	<string name="duckConvertConvert">Convert</string>
	<string name="duckPreviewRefresh">Refresh</string>	
	<string name="duck_hunter_headline">The DuckHunter script can easily convert "USB Rubber Ducky" scripts into NetHunter HID format.  You can generate preconfigured scripts at the incredibly useful <a href="http://www.ducktoolkit.com/Home.jsp">Ducky Toolkit</a> site, or check out the Rubber Ducky script syntax from the official <a href="https://github.com/hak5darren/USB-Rubber-Ducky/wiki/Duckyscript">README</a></string>

    <string name="iptables_label">Iptables Configuration</string>
    <string name="iptables_headline">Iptables Setup Config</string>
    <string name="iptables_description">Easily set up NAT or use iptables rules to route traffic.</string>

    <string name="payload_select">Please select</string>
    <string-array name="payloads">
        <item>windows/meterpreter/reverse_http</item>
        <item>windows/meterpreter/reverse_https</item>
    </string-array>

    <string name="source">Edit source</string>
    <string name="start_service">Start hostapd</string>
    <string name="stop_service">Stop hostapd</string>

    <string name="run_iptables">Run iptables</string>
    <string name="flush">Flush</string>

    <string name="start_dnsmasq">Start dnsmasq</string>
    <string name="stop_dnsmasq">Stop dnsmasq</string>

    <string name="start_badusb">Start BadUSB attack</string>
    <string name="stop_badusb">Stop BadUSB attack</string>

    <string name="KaliLauncherLabel">Kali Launcher</string>
    <string name="launch_kali_menu">Launch Kali Menu in Terminal</string>
    <string name="launch_kali_shell">Launch Kali Shell in Terminal</string>
    <string name="launch_wifite">Launch Wifite</string>
    <string name="kill_kali">Shutdown Kali</string>
    <string name="update_kali_chroot">Update Kali chroot</string>
    <string name="turn_off_external_wifi">Turn Off External Wifi</string>
    <string name="shutdown_kali">Unmount Kali</string>
    

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="close_app">Close Application</string>

    <string name="update">Update</string>
    <string name="load">Load file</string>
    <string name="save">Save</string>
    <string name="execute">Execute</string>
    <string name="execute_attack">Execute Attack</string>
    
    <string name="stop_mana">Stop mana</string>
    <string name="start_mana">Start mana</string>
    <string name="ip_address">IP address</string>
    <string name="bssid">BSSID</string>
    <string name="ssid">SSID</string>
    <string name="chanel">Chanel</string>
    <string name="enable_karma">Enable karma</string>
    <string name="admin">UAC Bypass</string>
    <string name="choose_language">Keyboard Layout</string>
    <string name="reset_usb">Reset USB</string>

    <string name="none">None</string>
    <string name="win7">Windows7</string>
    <string name="win8">Windows8</string>
    <string name="loading">Loading</string>
    <string name="iface">Interface</string>
    <string name="port">Port</string>
    <string name="address">Address</string>
    <string name="ulr">URL:</string>
    <string name="payload">Payload</string>
    <string name="dhcp_options">dhcp options</string>
    <string name="loading_service">Loading service state</string>
    <string name="get_external_ip">Get external IP</string>
    <string name="karma_loud">karma loud</string>
    <string name="dhcp_range">dhcp range</string>
    
    <string name="ps_ip_address">IP Address (LHOST)</string>
    <string name="ps_port">Port (LPORT)</string>
    <string name="ps_payload_url">URL to payload</string>

    <string name="toast_install_terminal">Error launching intent. Install Android Terminal!</string>
    <string name="descriptiontext" />
    <string name="tile_launch_app">Launch Nethunter App</string>
    <string name="tile_launch_shell">Launch Kali Shell</string>
    <string name="tile_launch_kali_menu">Launch Kali Menu</string>
</resources>
