<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:text="@string/hometitle"/>

    <Button
        android:id="@+id/tile_launch_shell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_kali_shell"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/tile_launch_kali_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_kali_menu"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/tile_launch_wifite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_wifite"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/tile_turn_off_external_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_off_external_wifi"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/tile_update_kali_chroot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_kali_chroot"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/tile_shutdown_kali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shutdown_kali"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>
</LinearLayout>